--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  count: 
+  count: 10
   lat: 1.5
   long: 1.5
-  uuid: 
-  user_id: 
+  uuid: "b066e127-e3e7-44c3-9dc8-bc26d5792ccb"
+  user_id: 1
 
 two:
-  count: 
+  count: 10
   lat: 1.5
   long: 1.5
-  uuid: 
-  user_id: 
+  uuid: "8e76a847-9d52-4b3d-b682-3383647788e7"
+  user_id: 2
