--- a/test/fixtures/thumbedup_movies.yml
+++ b/test/fixtures/thumbedup_movies.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  movie_id: 
-  user_id: 
+  movie_id: 1
+  user_id: 1
 
 two:
-  movie_id: 
-  user_id: 
+  movie_id: 2
+  user_id: 2
